--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@ body {
   box-sizing: border-box;
 
   position: absolute;
-  width: 438px;
+  width: 100%;
   height: 115px;
 
   border: 1px solid #ffffff;
